--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     margin: 0;
 }
 
+body {
+    background-color:aliceblue ;
+}
+
 header {
     margin-bottom: 50px;
 }
@@ -20,9 +24,11 @@ h1 {
     grid-template-rows: repeat(16, auto); */
     width: 500px;
     height: 500px;
-    border: 2px solid cyan;
+    border: 5px solid gray;
     margin: auto;
     margin-top: 10px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px 10px gray;
 }
 
 .item {
@@ -79,4 +85,17 @@ button {
     font-weight: 600;
     border-radius: 10px;
     background-color: transparent;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    background-color: beige;
+    width: 100%;
+    font-size: 20px;
+    font-family: 'Times new roman';
+    font-weight: 600;
+    margin-top: 20px;
+    padding: 20px;
+    text-align: center;
 }
