--- a/style.css
+++ b/style.css
@@ -1,101 +1,98 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-    background-color:aliceblue ;
+  background-color: aliceblue;
 }
 
 header {
-    margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 h1 {
-    text-align: center;
-    font-family: sans-serif;
-    font-size: 50px;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 50px;
 }
 
 #container {
-    display: grid;
-    /* grid-template-columns: repeat(16, auto);
+  display: grid;
+  /* grid-template-columns: repeat(16, auto);
     grid-template-rows: repeat(16, auto); */
-    width: 500px;
-    height: 500px;
-    border: 5px solid gray;
-    margin: auto;
-    margin-top: 10px;
-    border-radius: 10px;
-    box-shadow: 2px 2px 5px 10px gray;
+  width: 500px;
+  height: 500px;
+  border: 5px solid gray;
+  margin: auto;
+  margin-top: 10px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px 10px gray;
 }
 
 .item {
-    width: auto;
-    height: auto;
-    
+  width: auto;
+  height: auto;
 }
 
 .item:hover {
-    background-color: black;
+  background-color: black;
 }
 
 input[type="color"] {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    width: 100px;
-    height: 100px;
-    border: none;
-    border-radius: 10px;
-    background-color: transparent;
-    cursor: pointer;
-    margin-left: 25 0px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 100px;
+  height: 100px;
+  border: none;
+  border-radius: 10px;
+  background-color: transparent;
+  cursor: pointer;
+  margin-left: 25 0px;
 }
 
 input[type="color"]::-webkit-color-swatch {
-    border-radius: 50%;
-    border: none;
+  border-radius: 50%;
+  border: none;
 }
-    
+
 #main-section {
-    display: grid;
-    /* justify-content:space-around;
+  display: grid;
+  /* justify-content:space-around;
     margin-right: auto;
     margin-left: auto; */
-    grid-template-columns: repeat(5, 100px);
-    grid-template-rows: repeat(2, 60px);
-    gap: 20px;
-    margin-left: 640px;
-    
+  grid-template-columns: repeat(5, 100px);
+  grid-template-rows: repeat(2, 60px);
+  gap: 20px;
+  margin-left: 640px;
 }
 
 #sub-section {
-    display: grid;
-    grid-template-rows: repeat(2, 30px);
-
+  display: grid;
+  grid-template-rows: repeat(2, 30px);
 }
 
 button {
-    padding: 10px;
-    text-align: center;
-    font-size: 18px;
-    font-family: monospace;
-    font-weight: 600;
-    border-radius: 10px;
-    background-color: transparent;
+  padding: 10px;
+  text-align: center;
+  font-size: 18px;
+  font-family: monospace;
+  font-weight: 600;
+  border-radius: 10px;
+  background-color: transparent;
 }
 
 footer {
-    position: fixed;
-    bottom: 0;
-    background-color: beige;
-    width: 100%;
-    font-size: 20px;
-    font-family: 'Times new roman';
-    font-weight: 600;
-    margin-top: 20px;
-    padding: 20px;
-    text-align: center;
+  position: fixed;
+  bottom: 0;
+  background-color: beige;
+  width: 100%;
+  font-size: 20px;
+  font-family: "Times new roman";
+  font-weight: 600;
+  margin-top: 20px;
+  padding: 20px;
+  text-align: center;
 }
