--- a/style.css
+++ b/style.css
@@ -44,8 +44,8 @@ input[type="color"] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  width: 100px;
-  height: 100px;
+  width: 110px;
+  height: 110px;
   border: none;
   border-radius: 10px;
   background-color: transparent;
@@ -63,10 +63,10 @@ input[type="color"]::-webkit-color-swatch {
   /* justify-content:space-around;
     margin-right: auto;
     margin-left: auto; */
-  grid-template-columns: repeat(5, 100px);
+  grid-template-columns: repeat(6, 100px);
   grid-template-rows: repeat(2, 60px);
   gap: 20px;
-  margin-left: 640px;
+  margin-left: 570px;
 }
 
 #sub-section {
@@ -82,6 +82,23 @@ button {
   font-weight: 600;
   border-radius: 10px;
   background-color: transparent;
+  box-shadow: 2px 2px 2px 2px;
+}
+
+button:hover {
+  background-color: brown;
+  cursor: pointer;
+}
+
+button:active {
+  transition: 0.2s;
+  transform: scale(0.9);
+}
+
+p {
+  font-size: 14px;
+  font-weight: 600;
+  font-family: monospace;
 }
 
 footer {
